--- a/Web/Views/Calendario/Index.cshtml
+++ b/Web/Views/Calendario/Index.cshtml
@@ -192,32 +192,30 @@
 
 
                                     <div class="col-12">
-                                        <!-- Custom Tabs -->
-
-
-                                        <div class=" d-flex p-0">
-
-                                            @if (categorias != null)
-                                            {
-                                                foreach (var cat in categorias)
+                                         <div class=" d-flex p-0">
+                                            <ul class="nav nav-pills ml-auto p-2" id="nav-puestos">
+                                                @if (categorias != null)
                                                 {
-                                                    <ul class="nav nav-pills ml-auto p-2" id="nav-puestos">
+                                                    foreach (var cat in categorias)
+                                                    {
+
                                                         <li class="nav-item"><a class="nav-link" href="#@cat.Id" onclick="mostrarPuestos(@cat.Id)" data-toggle="tab">@cat.Descripcion</a></li>
-                                                    </ul>
-
+                                                    }
                                                 }
-                                            }
-                                            else
-                                            {
-                                                <span class="right badge badge-danger ml-auto p-2" data-info="error-categoria">Aún no hay categorías.</span>
-                                            }
+                                                else
+                                                {
+                                                    <li>
+                                                        <span id="errorCategoria" class="right badge badge-danger" data-info="error-categoria">Aún no hay categorías.</span>
+                                                    </li>
+                                                }
+
+
+                                            </ul>
                                         </div>
-
-
 
                                         <ul class="tab-content" style="height: 13em; overflow-y:scroll">
 
-                                        @if (puestos != null)
+                                        @if(puestos != null)
                                         {
                                             foreach (var item in puestos)
                                             {
@@ -230,9 +228,8 @@
                                                 </li>
 
                                             }
-                                        }
-                                            
 
+                                        }
                                         </ul>
                                     </div>
                                     <!-- /.col -->
@@ -449,6 +446,10 @@
             });
 
             $('#nav-puestos li a').eq(0).addClass('active');
+
+            //Validar si no hay categorias ni puestos disponibles
+            if ($('#errorCategoria').is(':visible'))
+                $('#btnSave').attr('disabled', true);
 
         }
 
