--- a/Web/Views/Shared/_MenuLider.cshtml
+++ b/Web/Views/Shared/_MenuLider.cshtml
@@ -136,41 +136,14 @@
                         <p>Correo electrónico</p>
                     </a>
                 </li>
-
-
-
-
-
-
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
-                        <i class="far fa-circle nav-icon"></i>
-                        <p>
-                            Bitácoras
-                            <i class="right fas fa-angle-left"></i>
-                        </p>
+                    <a href="@Url.Action("Index","Bitacora")" class="nav-link">
+                        <i class="fas fa-clipboard-list nav-icon"></i>
+                        <p>Bitácora Rol Servicio</p>
                     </a>
-                    <ul class="nav nav-treeview" style="display: none;">
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">
-                                <i class="far fa-dot-circle nav-icon"></i>
-                                <p>Bitácora ...</p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">
-                                <i class="far fa-dot-circle nav-icon"></i>
-                                <p>Bitácora ...</p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">
-                                <i class="far fa-dot-circle nav-icon"></i>
-                                <p>Bitácora ...</p>
-                            </a>
-                        </li>
-                    </ul>
                 </li>
+
+
 
             </ul>
         </nav>
