Solucion de bugs y mantenimiento de correo a un 85%

--- a/Web/Views/Shared/_MenuLider.cshtml
+++ b/Web/Views/Shared/_MenuLider.cshtml
@@ -131,7 +131,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="@Url.Action("Index","Correo")" class="nav-link">
                         <i class="far fa-envelope nav-icon"></i>
                         <p>Correo electrónico</p>
                     </a>
