--- a/Web/Views/Recuperacion/Recovery.cshtml
+++ b/Web/Views/Recuperacion/Recovery.cshtml
@@ -41,9 +41,10 @@
                 @using (Html.BeginForm("RecoveryPass", "Recuperacion", FormMethod.Post))
                 {
                     @Html.AntiForgeryToken()
+                    @Html.HiddenFor(model => model.token)
                     <div class="input-group mb-3">
-                        @Html.PasswordFor(model => model.NewClave, new { @class = "form-control", placeholder = "Contraseña" } )
-                        
+                        @Html.PasswordFor(model => model.NewClave, new { @class = "form-control", placeholder = "Contraseña" })
+
                         <div class="input-group-append">
                             <div class="input-group-text">
                                 <span class="fas fa-lock"></span>
@@ -55,7 +56,7 @@
                     </div>
                     <div class="input-group mb-3">
                         @Html.PasswordFor(model => model.ConfirmNewClave, new { @class = "form-control", placeholder = "Confirmar contraseña" })
-                        
+
                         <div class="input-group-append">
                             <div class="input-group-text">
                                 <span class="fas fa-lock"></span>
@@ -77,7 +78,7 @@
 
                 <p class="mb-1 mt-4">
 
-                    <a id="ojosMostrar" title="Mostrar u ocultar las contraseñas"><img src="~/Content/dist/img/ojo primary.png" width="10%" height="10%"/></a>
+                    <a id="ojosMostrar" title="Mostrar u ocultar las contraseñas"><img src="~/Content/dist/img/ojo primary.png" width="10%" height="10%" /></a>
                 </p>
 
             </div>
