--- a/Web/Views/Usuario/ChangeComplet.cshtml
+++ b/Web/Views/Usuario/ChangeComplet.cshtml
@@ -68,7 +68,7 @@
 
     <script>
         function redireccionar() {
-            window.location.href = "../Login/Prueba";
+            window.location.href = "../Login/Index";
         }
     </script>
     <script src="~/Content/plugins/sweetalert2/sweetalert2.min.js"></script>
