--- a/Web/Views/Correo/Edit.cshtml
+++ b/Web/Views/Correo/Edit.cshtml
@@ -2,7 +2,7 @@
 
 @{ ViewBag.Title = "Editar Correo"; }
 
-@{ string idValor = Convert.ToString(ViewBag.ElId);}
+@*@{ string idValor = Convert.ToString(ViewBag.ElId);}*@
 
 <!-- Content Header (Page header) -->
 <div class="content-header">
@@ -23,9 +23,7 @@
 </div>
 
 
-@using (Html.BeginForm("Save", "Correo", FormMethod.Post))
-{
-    @Html.AntiForgeryToken()
+
 
     <center>
         <div class="card card-default mt-3 col-md-8">
@@ -34,53 +32,59 @@
                     <p>* Campos requeridos</p>
                 </div>
                 <div>
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    @*@Html.HiddenFor(model => model.Correo)*@
-                    <div class="row text-left">
-                        <div class="col-md-12">
-                            <div class="form-group row">
-                                <strong class="text-danger">*</strong>
-                                @Html.LabelFor(model => model.Correo, htmlAttributes: new { @class = "control-label col-md-2" })
-                                <div class="col-md-8">
-                                    @Html.EditorFor(model => model.Correo, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.Correo, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
+                    @using (Html.BeginForm("Edit", "CorreoEmisor", FormMethod.Post))
+                    {
+                        @Html.AntiForgeryToken()
+                        <form>
+                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                            @Html.HiddenFor(model => model.Id)
+                            <div class="row text-left">
+                                <div class="col-md-12">
+                                    <div class="form-group row">
+                                        <strong class="text-danger">*</strong>
+                                        @Html.LabelFor(model => model.Correo, htmlAttributes: new { @class = "control-label col-md-2" })
+                                        <div class="col-md-8">
+                                            @Html.EditorFor(model => model.Correo, new { htmlAttributes = new { @class = "form-control" } })
+                                            @Html.ValidationMessageFor(model => model.Correo, "", new { @class = "text-danger" })
+                                        </div>
+                                    </div>
 
-                            <div class="form-group row">
-                                <strong class="text-danger">*</strong>
-                                @Html.LabelFor(model => model.Clave, htmlAttributes: new { @class = "control-label col-md-2" })
-                                <div class="col-md-8">
-                                    @Html.EditorFor(model => model.Clave, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.Clave, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
+                                    <div class="form-group row">
+                                        <strong class="text-danger">*</strong>
+                                        @Html.LabelFor(model => model.Clave, htmlAttributes: new { @class = "control-label col-md-2" })
+                                        <div class="col-md-8">
+                                            @Html.EditorFor(model => model.Clave, new { htmlAttributes = new { @class = "form-control" } })
+                                            @Html.ValidationMessageFor(model => model.Clave, "", new { @class = "text-danger" })
+                                        </div>
+                                    </div>
 
-                            @if (Model.Estado)
-                            {
-                                <div class="form-group">
-                                    <div class="custom-control custom-switch custom-switch-off-danger custom-switch-on-success">
-                                        @Html.EditorFor(model => model.Estado, new { htmlAttributes = new { @class = "custom-control-input", id = "customSwitch3", @type = "checkbox" } })
-                                        <label class="custom-control-label" for="customSwitch3">Estado</label>
+                                    @*@if (Model.Estado)
+                        {*@
+                                    <div class="form-group">
+                                        <div class="custom-control custom-switch custom-switch-off-danger custom-switch-on-success">
+                                            @Html.EditorFor(model => model.Estado, new { htmlAttributes = new { @class = "custom-control-input", id = "customSwitch3", @type = "checkbox" } })
+                                            <label class="custom-control-label" for="customSwitch3">Estado</label>
+                                        </div>
+                                    </div>
+                                    @*}
+                        else
+                        {
+                            <span class="right badge-pill badge-warning">La categoría de este puesto está desactivada.</span>
+                        }*@
+                                    <div class="modal-footer justify-content-end">
+                                        <button type="submit" class="btn btn-success">Guardar</button>
                                     </div>
                                 </div>
-                            }
-                            else
-                            {
-                                <span class="right badge-pill badge-warning">La categoría de este puesto está desactivada.</span>
-                            }
-                            <div class="modal-footer justify-content-end">
-                                <button type="submit" class="btn btn-success">Guardar</button>
                             </div>
-                        </div>
+                        </form>
+                    }
                     </div>
-                </div>
             </div>
         </div>
     </center>
 
 
-}
+
 
 
 @section scripts {
