--- a/Web/Views/Shared/_MenuLider.cshtml
+++ b/Web/Views/Shared/_MenuLider.cshtml
@@ -137,7 +137,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="@Url.Action("Index","Bitacora")" class="nav-link">
+                    <a href="@Url.Action("Index","Bitacora")" class="nav-link" id="menubitacora">
                         <i class="fas fa-clipboard-list nav-icon"></i>
                         <p>Bitácora Rol Servicio</p>
                     </a>
