--- a/Web/Views/Shared/_MenuLider.cshtml
+++ b/Web/Views/Shared/_MenuLider.cshtml
@@ -14,7 +14,7 @@
         <nav class="mt-4">
             <ul class="nav nav-pills nav-sidebar flex-column open" data-widget="treeview" role="menu" data-accordion="false">
                 <!-- Add icons to the links using the .nav-icon class
-    with font-awesome or any other icon font library -->
+                with font-awesome or any other icon font library -->
                 <li class="nav-item ">
 
 
@@ -92,19 +92,19 @@
                     <ul class="nav nav-treeview">
                         <li class="nav-item">
                             <a href="@Url.Action("ReporteSesion","Reporte")" class="nav-link pacientes" id="reportesesion">
-                                <i class="far fa-circle nav-icon"></i>
+                                <i class="far fa-file-alt nav-icon"></i>
                                 <p>Reporte de accesos</p>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a href="@Url.Action("ReporteUsuariosIngresados","Reporte")" class="nav-link" id="reporteusuarios">
-                                <i class="far fa-circle nav-icon"></i>
+                                <i class="far fa-file-alt nav-icon"></i>
                                 <p>Reporte de usuarios</p>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a href="@Url.Action("ReporteServicios","Reporte")" class="nav-link" id="reporteservicios">
-                                <i class="far fa-circle nav-icon"></i>
+                                <i class="far fa-file-alt nav-icon"></i>
                                 <p>Reporte fechas de servicio</p>
                             </a>
                         </li>
@@ -122,6 +122,7 @@
                         </p>
                     </a>
                 </li>
+                <!--
                 <li class="nav-item">
                     <a href="#" class="nav-link">
                         <i class="nav-icon fas fa-database"></i>
@@ -130,6 +131,8 @@
                         </p>
                     </a>
                 </li>
+                -->
+
                 <li class="nav-item">
                     <a href="@Url.Action("Index","CorreoEmisor")" class="nav-link">
                         <i class="far fa-envelope nav-icon"></i>
