--- a/Web/Views/CorreoEmisor/Edit.cshtml
+++ b/Web/Views/CorreoEmisor/Edit.cshtml
@@ -14,7 +14,7 @@
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
                     <li class="breadcrumb-item"><a href="@Url.Action("Index","Home")">Inicio</a></li>
-                    <li class="breadcrumb-item"><a href="@Url.Action("Index","Correo")">Correo electrónico</a></li>
+                    <li class="breadcrumb-item"><a href="@Url.Action("Index","CorreoEmisor")">Correo electrónico</a></li>
                     <li class="breadcrumb-item active">Editar</li>
                 </ol>
             </div><!-- /.col -->
