--- a/Web/Views/Bitacora/Details.cshtml
+++ b/Web/Views/Bitacora/Details.cshtml
@@ -43,7 +43,7 @@
 
                                     <center>
                                         <h4>Reciente</h4>
-                                        <h5>Fecha de creación</h5>
+                                        <h5>Fecha de modificación</h5>
                                         <h6>@rolServicio.Fecha_creacion</h6>
                                     </center>
                                     <div id="infoActual" class="text-muted">
