--- a/Web/Views/Calendario/Index.cshtml
+++ b/Web/Views/Calendario/Index.cshtml
@@ -38,7 +38,7 @@
 
             <div class="modal-body">
                 <div class="bs-stepper">
-                    <div class="bs-stepper-header modal-header" style="border-bottom:hidden" role="tablist">
+                    <div class="bs-stepper-header modal-header" style="border-bottom:hidden;" role="tablist">
 
                         <!-- your steps here -->
                         <div class="step" data-target="#logins-part">
