--- a/Web/Views/CorreoEmisor/Index.cshtml
+++ b/Web/Views/CorreoEmisor/Index.cshtml
@@ -54,7 +54,7 @@
                 <div class="row" style="padding-left: 10%; padding-right: 10%">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <strong class="text-danger">*</strong>
+                            @*<strong class="text-danger">*</strong>*@
                             @Html.LabelFor(model => model.Correo, htmlAttributes: new { @class = "control-label" })
                             <div class="col-md-12">
                                 @Html.EditorFor(model => model.Correo, new { htmlAttributes = new { @class = "form-control", @disabled = true } })
@@ -63,7 +63,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="form-group">
-                            <strong class="text-danger">*</strong>
+                            @*<strong class="text-danger">*</strong>*@
                             @Html.LabelFor(model => model.Clave, htmlAttributes: new { @class = "control-label" })
                             <div class="col-md-12">
                                 @Html.EditorFor(model => model.Clave, new { htmlAttributes = new { @class = "form-control", @disabled = true } })
@@ -72,7 +72,7 @@
                     </div>
 
                 </div>
-                <div class="row" style=" display: grid; justify-content:center; align-content: center">
+                @*<div class="row" style=" display: grid; justify-content:center; align-content: center">
                     <div class="text-center">
                         <div class="form-group">
                             <p class="text-sm">
@@ -87,7 +87,7 @@
                             </p>
                         </div>
                     </div>
-                </div>
+                </div>*@
 
                 @*
                             <div class="text-muted">
